# fast_zero

./: .gitignore  pyproject.toml
fast_zero/: database.py  models.py
migrations/: env.py
migrations/versions/: 6545dfea9326_create_users_table.py  f7685ed3b77d_colocando_o_bd.py
tests/: test_app.py
